    - Updated compiler-warning-fixes for RRDtool 1.4.
    - Updated bts428778-floating-point-exception for RRDtool 1.4.
  * Added debian/README.source:
    - The file includes a pointer to /usr/share/doc/quilt/README.source.
  * debian/librrd4.symbols:
    - Added symbols introduced in 1.4~rc2.
  * Added new binary package 'rrdcached' for the newly introduced "data
    caching daemon".

 -- Sebastian Harl <tokkee@debian.org>  Fri, 25 Sep 2009 22:35:04 +0200

rrdtool (1.3.8-1) unstable; urgency=low

  [ Sebastian Harl ]
  * New upstream release:
    - Fixed various memory leaks in the Python bindings, thanks to Anders
      Hammarquist for reporting this and providing a patch (Closes: #529291).
  * debian/patches:
    - Added bts530814-hurd to fix a FTBFS on Hurd, thanks to Marc Dequènes for
      reporting this and providing a patch (Closes: #530814).
    - Removed doc-fixes - applied upstream.
    - Added bts332766-negative-timestamps - upstream patch to fix the handling
      of negative timestamps in rrdupdate(1), thanks to Frank Zacharias for
      reporting this (Closes: #332766).
  * debian/control:
    - Removed transitional package "python-rrd" which is no longer required.
    - Let rrdtool-dbg depend on ${shlibs:Depends}.
    - Build-depend on intltool.

  [ Bernd Zeimetz ]
  * debian/rules, debian/control:
    - Build Python dbg modules into rrdtool-dbg. Add necessary
      (build-) dependencies.

 -- Sebastian Harl <tokkee@debian.org>  Mon, 01 Jun 2009 18:49:13 +0200

rrdtool (1.3.7-1) unstable; urgency=low

  * New upstream release (Closes: #431060):
    - Fixed pathname used in rrdgraph's --imginfo output (Closes: #497739).
  * debian/patches:
    - Updated bts428778-floating-point-exception to apply to the latest
      version of rrdtool; use rrd_free2() instead of rrd_free() to not leak
      memory.
    - Updated no-rpath-for-perl to apply to the latest version of rrdtool.
    - Removed bts493553-pango-utf-8 - included upstream.