@@ -27,8 +27,11 @@ rrdtool (1.4~rc2-1) experimental; urgency=low
     - Added symbols introduced in 1.4~rc2.
   * Added new binary package 'rrdcached' for the newly introduced "data
     caching daemon".
+  * debian/rrdcached.init.d, debian/rrdcached.default:
+    - Added an init script for rrdcached supporting start, stop, status,
+      restart, force-reload. The script is based on the collectd init script.
 
- -- Sebastian Harl <tokkee@debian.org>  Fri, 25 Sep 2009 22:35:04 +0200
+ -- Sebastian Harl <tokkee@debian.org>  Fri, 25 Sep 2009 23:27:32 +0200
 
 rrdtool (1.3.8-1) unstable; urgency=low
 
